Fixed the responsive,scrollbar,navigation issue

--- a/autozone-poc/src/components/single-blog/single-blog.css
+++ b/autozone-poc/src/components/single-blog/single-blog.css
@@ -1,49 +1,26 @@
 .blog-comment{
-    min-height: 50px;
-    margin-bottom: 30px;
-    margin-left: 40px;
+    margin: 25px;
 }
-.comment-respond{
-    margin: 30px;
-}
+
 .comment-form{
-    margin: 30PX;
-    
-}
-.comment-input{
-    display: flex;
-    
-}
-.form-group-name{
-    width: 350px;
-    margin-bottom: 20px;
-    color:#FFFFFF;
-    outline: none;
-    margin-right: 20px;
-   
-}
-.form-group-email{
-    width: 350px;
-    margin-bottom: 20px;
-    color:#FFFFFF;
-    outline: none;
-   
-}
-.form-group-sub{
-    width: 500px;
-    margin-bottom: 20px;
-}
-.form-group-textarea{
-    width: 550px;
-    color:#FFFFFF;
-    margin-bottom: 20px;
-}
-.userimg{
-    width: 20px;
-    height: 20px;
-}
+    padding-left:0px ;
+   }
+
+.col-25 {
+    float: left;
+    width: 25%;
+    margin-top: 6px;
+    margin-right: 6px;
+    margin-bottom: 6px;
+  }
+  .col-75 {
+    width: 50%;
+    margin-top: 6px;
+    margin-bottom: 10px;
+  }
+
 .submit-btn{
-    width: 180px;
+    width: 40%;
     height: 40px;
     color: rgb(73, 71, 71);
     margin-top: 20px;
@@ -60,51 +37,52 @@ color: white;
 
 }
 .comments-list{
-    background-color:rgb(245, 239, 231);
-    width: 800px;
+    background-color:rgb(221, 216, 216);
+    width: 50%;
     height: 60px;
     padding: 20px;
     text-align: start;
-    border-radius: 15px;
-    margin-left: 30PX;
+    border-radius: 10px;
     margin: 20px;
     
   }
-  .comment-count{
-      margin: 30px;
-  }
+  
   
  .bgimg{
-  
-     margin-left: 30px;
-     margin-right: 30px;
-    width: 1480px;
-    height: 396px;
+    width: 100%;
+     height: 390px;
+    position: relative;
+    z-index: 1;
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: block;
 }
-.sub-img{
-    width: 300px;
-    height: 300px;
 
-}
 #singleblogvideo{
 
-   
-    border: none;
-    display:"initial";
-    position:"relative";
-    overflow: hidden;
-    
-    
-   
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  padding-top: 56.25%; /* 16:9 Aspect Ratio */
+  
 }
 
-.player-wrapper {
-    position: relative;
-    padding-top: 56.25%; /* 720 / 1280 = 0.5625 */
-  }
-  
-  .react-player {
-    position: absolute;
-    top: 0;
-    left: 0;
+.iframestyle{
+   
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+   
+}
+@media screen and (max-width: 600px) {
+    .col-25, .col-75, input[type=text] {
+      width: 100%;
+      margin-top: 0;
+    }
   }
